LPS-77095 Build Lang

--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_ar.properties
@@ -27,7 +27,10 @@ delete-row=حذف صف؟ (Automatic Translation)
 dismiss-operation=فصل العملية (Automatic Translation)
 do=هل (Automatic Translation)
 does-not-contain=لا يحتوي على (Automatic Translation)
+drag-from-sidebar-and-drop-here=اسحب من الشريط الجانبي وإسقاط هنا (Automatic Translation)
 duplicate-field=حقل مكرر (Automatic Translation)
+element-sets=مجموعات العنصر (Automatic Translation)
+elements=عناصر (Automatic Translation)
 enable=تمكين (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=اسم الحقل قيد الاستخدام بالفعل. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=إزالة حقل (Automatic Translation)
 remove-success-page=إزالة صفحة النجاح (Automatic Translation)
 require=تتطلب (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=يتطلب حقل (Automatic Translation)
+required-field=حقل مطلوب (Automatic Translation)
 reset-page=إعادة تعيين الصفحة (Automatic Translation)
 rule=القاعدة (Automatic Translation)
 rule-builder=منشئ القاعدة (Automatic Translation)
