--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_bg.properties
@@ -27,7 +27,10 @@ delete-row=Изтриване на ред? (Automatic Translation)
 dismiss-operation=Операцията за изтриване (Automatic Translation)
 do=Правя (Automatic Translation)
 does-not-contain=Не съдържа (Automatic Translation)
+drag-from-sidebar-and-drop-here=Плъзнете от страничната лента и пуснете тук (Automatic Translation)
 duplicate-field=Дублирано поле (Automatic Translation)
+element-sets=Елемент комплекти (Automatic Translation)
+elements=Елементи (Automatic Translation)
 enable=Разреши (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Името на полето вече е в употреба. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Премахване на поле (Automatic Translation)
 remove-success-page=Премахване на успех страница (Automatic Translation)
 require=Изискват (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Изисква поле (Automatic Translation)
+required-field=Задължително поле (Automatic Translation)
 reset-page=Възстановяване на страница (Automatic Translation)
 rule=Правило (Automatic Translation)
 rule-builder=Правило строител (Automatic Translation)
