--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_ca.properties
@@ -27,7 +27,10 @@ delete-row=Suprimeix la fila? (Automatic Translation)
 dismiss-operation=Desestimar l'operació (Automatic Translation)
 do=Fer (Automatic Translation)
 does-not-contain=No conté (Automatic Translation)
+drag-from-sidebar-and-drop-here=Arrossegar des de sidebar i aquí (Automatic Translation)
 duplicate-field=Camp duplicat (Automatic Translation)
+element-sets=Element conjunts (Automatic Translation)
+elements=Elements de (Automatic Translation)
 enable=Permetre (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Aquest nom de camp ja existeix.
@@ -53,7 +56,7 @@ remove-field=Treure el camp (Automatic Translation)
 remove-success-page=Suprimir pàgina d'èxit (Automatic Translation)
 require=Requereixen (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Requereixen camp (Automatic Translation)
+required-field=Camp obligatori (Automatic Translation)
 reset-page=Reinicialitzar pàgina
 rule=Regla (Automatic Translation)
 rule-builder=Regla constructor (Automatic Translation)
