--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_cs.properties
@@ -27,7 +27,10 @@ delete-row=Odstranit řádek? (Automatic Translation)
 dismiss-operation=Zrušit operaci (Automatic Translation)
 do=Atrakce (Automatic Translation)
 does-not-contain=Neobsahuje žádné (Automatic Translation)
+drag-from-sidebar-and-drop-here=Přetáhněte z postranního panelu a umístit sem (Automatic Translation)
 duplicate-field=Duplicitní pole (Automatic Translation)
+element-sets=Prvek množiny (Automatic Translation)
+elements=Prvky (Automatic Translation)
 enable=Povolit (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Pole název je již používán. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Odstranit pole (Automatic Translation)
 remove-success-page=Odebrat stránku úspěch (Automatic Translation)
 require=Vyžadovat (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Požadovat, aby pole (Automatic Translation)
+required-field=Povinné pole (Automatic Translation)
 reset-page=Obnovit stránku (Automatic Translation)
 rule=Pravidlo (Automatic Translation)
 rule-builder=Tvůrce pravidlo (Automatic Translation)
