--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_el.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_el.properties
@@ -27,7 +27,10 @@ delete-row=Διαγραφή γραμμής; (Automatic Translation)
 dismiss-operation=Να απορρίψει την λειτουργία (Automatic Translation)
 do=Κάνουμε (Automatic Translation)
 does-not-contain=Δεν περιέχει (Automatic Translation)
+drag-from-sidebar-and-drop-here=Σύρετε από την πλευρική εργαλειοθήκη και αποθέστε το εδώ (Automatic Translation)
 duplicate-field=Υπάρχει πανομοιότυπο πεδίο (Automatic Translation)
+element-sets=Στοιχείο σύνολα (Automatic Translation)
+elements=Στοιχεία (Automatic Translation)
 enable=Ενεργοποίηση (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Όνομα πεδίου είναι ήδη σε χρήση. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Καταργήστε το πεδίο (Automatic Translation)
 remove-success-page=Αφαιρέστε επιτυχία σελίδα (Automatic Translation)
 require=Απαιτούν (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Απαιτείται το πεδίο (Automatic Translation)
+required-field=Απαιτούμενο πεδίο (Automatic Translation)
 reset-page=Επαναφορά σελίδας (Automatic Translation)
 rule=Κανόνας (Automatic Translation)
 rule-builder=Κανόνας οικοδόμος (Automatic Translation)
