--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_en.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_en.properties
@@ -27,7 +27,10 @@ delete-row=Delete row?
 dismiss-operation=Dismiss Operation
 do=Do
 does-not-contain=Does not contain
+drag-from-sidebar-and-drop-here=Drag from sidebar and drop here
 duplicate-field=Duplicate Field
+element-sets=Element Sets
+elements=Elements
 enable=Enable
 enable-x=Enable {0}
 field-name-is-already-in-use=Field name is already in use.
@@ -53,7 +56,7 @@ remove-field=Remove Field
 remove-success-page=Remove Success Page
 require=Require
 require-x=Require {0}
-required-field=Require Field
+required-field=Required Field
 reset-page=Reset Page
 rule=Rule
 rule-builder=Rule Builder
