--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_es.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_es.properties
@@ -27,7 +27,10 @@ delete-row=¿Borrar fila? (Automatic Translation)
 dismiss-operation=Despedir a operación (Automatic Translation)
 do=Hacer (Automatic Translation)
 does-not-contain=No contiene (Automatic Translation)
+drag-from-sidebar-and-drop-here=Arrastrar desde la barra lateral y colocar aquí (Automatic Translation)
 duplicate-field=Campo duplicado (Automatic Translation)
+element-sets=Conjuntos de elementos (Automatic Translation)
+elements=Elementos (Automatic Translation)
 enable=Permiten (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=El nombre del campo ya está en uso.
@@ -53,7 +56,7 @@ remove-field=Eliminar campo (Automatic Translation)
 remove-success-page=Quitar página de éxito (Automatic Translation)
 require=Requieren (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Requiere el campo (Automatic Translation)
+required-field=Campo obligatorio (Automatic Translation)
 reset-page=Reiniciar página
 rule=Regla (Automatic Translation)
 rule-builder=Creador de la regla (Automatic Translation)
