--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_et.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_et.properties
@@ -27,7 +27,10 @@ delete-row=Rea kustutamiseks? (Automatic Translation)
 dismiss-operation=Loobumistoiming (Automatic Translation)
 do=Ärge (Automatic Translation)
 does-not-contain=Ei sisalda (Automatic Translation)
+drag-from-sidebar-and-drop-here=Külgribalt lohistage ja kukutage siin (Automatic Translation)
 duplicate-field=Korduv väli (Automatic Translation)
+element-sets=Elemendi komplektid (Automatic Translation)
+elements=Elemendid (Automatic Translation)
 enable=Luba (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Välja nimi on juba kasutusel. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Eemalda väli (Automatic Translation)
 remove-success-page=Eemaldada edu leht (Automatic Translation)
 require=Nõuda (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Välja nõuda (Automatic Translation)
+required-field=Kohustuslik väli (Automatic Translation)
 reset-page=Lähtesta lehekülg (Automatic Translation)
 rule=Reegel (Automatic Translation)
 rule-builder=Reegli ehitaja (Automatic Translation)
