--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_fa.properties
@@ -27,7 +27,10 @@ delete-row=ردیف را حذف کرده؟ (Automatic Translation)
 dismiss-operation=عملیات اخراج (Automatic Translation)
 do=انجام (Automatic Translation)
 does-not-contain=شامل نمی شود (Automatic Translation)
+drag-from-sidebar-and-drop-here=از نوار جانبی بکشید و رها کردن در اینجا (Automatic Translation)
 duplicate-field=زمینه های تکراری (Automatic Translation)
+element-sets=عنصر مجموعه (Automatic Translation)
+elements=عناصر (Automatic Translation)
 enable=فعال کردن (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=نام فایل هم اکنون در حال استفاده است.
@@ -53,7 +56,7 @@ remove-field=حذف زمینه (Automatic Translation)
 remove-success-page=حذف صفحه موفقیت (Automatic Translation)
 require=نیاز (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=نیاز به زمینه (Automatic Translation)
+required-field=زمینه های مورد نیاز (Automatic Translation)
 reset-page=راه‌اندازی مجدد صفحه
 rule=قانون (Automatic Translation)
 rule-builder=ساز قانون (Automatic Translation)
