--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_fr.properties
@@ -27,7 +27,10 @@ delete-row=Supprimer la ligne ? (Automatic Translation)
 dismiss-operation=Rejeter l'opération (Automatic Translation)
 do=Faire (Automatic Translation)
 does-not-contain=Ne contient pas (Automatic Translation)
+drag-from-sidebar-and-drop-here=Faites glisser de la sidebar et déposer ici (Automatic Translation)
 duplicate-field=Champ en double (Automatic Translation)
+element-sets=Ensembles d’éléments (Automatic Translation)
+elements=Éléments (Automatic Translation)
 enable=Enable (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Le nom du champs est déjà utilisé.
@@ -53,7 +56,7 @@ remove-field=Supprimer le champ (Automatic Translation)
 remove-success-page=Supprimer la Page de réussite (Automatic Translation)
 require=Nécessitent (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Besoin de champ (Automatic Translation)
+required-field=Champ obligatoire (Automatic Translation)
 reset-page=Réinitialiser la page
 rule=Règle (Automatic Translation)
 rule-builder=Générateur de règle (Automatic Translation)
