--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_gl.properties
@@ -27,7 +27,10 @@ delete-row=Delete row? (Automatic Copy)
 dismiss-operation=Descartar operación
 do=Do (Automatic Copy)
 does-not-contain=Does not contain (Automatic Copy)
+drag-from-sidebar-and-drop-here=Drag from sidebar and drop here (Automatic Copy)
 duplicate-field=Duplicate Field (Automatic Copy)
+element-sets=Element Sets (Automatic Copy)
+elements=Elements (Automatic Copy)
 enable=Enable (Automatic Copy)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Field name is already in use. (Automatic Copy)
@@ -53,7 +56,7 @@ remove-field=Remove Field (Automatic Copy)
 remove-success-page=Remove Success Page (Automatic Copy)
 require=Require (Automatic Copy)
 require-x=Require {0} (Automatic Copy)
-required-field=Require Field (Automatic Copy)
+required-field=Required Field (Automatic Copy)
 reset-page=Reset Page (Automatic Copy)
 rule=Rule (Automatic Copy)
 rule-builder=Rule Builder (Automatic Copy)
