--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_hi_IN.properties
@@ -27,7 +27,10 @@ delete-row=पंक्ति हटाएँ? (Automatic Translation)
 dismiss-operation=कार्रवाई को खारिज (Automatic Translation)
 do=करते हैं (Automatic Translation)
 does-not-contain=नहीं है (Automatic Translation)
+drag-from-sidebar-and-drop-here=साइडबार से खींचें और यहां ड्रॉप (Automatic Translation)
 duplicate-field=डुप्लिकेट फ़ील्ड (Automatic Translation)
+element-sets=तत्व सेट्स (Automatic Translation)
+elements=तत्वों (Automatic Translation)
 enable=सक्षम करें (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=फ़ील्ड का नाम पहले से उपयोग में है। (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=फ़ील्ड निकालें (Automatic Translation)
 remove-success-page=सफलता पेज निकालें (Automatic Translation)
 require=की आवश्यकता (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=फ़ील्ड की आवश्यकता होती है (Automatic Translation)
+required-field=आवश्यक फ़ील्ड (Automatic Translation)
 reset-page=पृष्ठ रीसेट करें (Automatic Translation)
 rule=नियम (Automatic Translation)
 rule-builder=नियम बिल्डर (Automatic Translation)
