--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_hu.properties
@@ -27,7 +27,10 @@ delete-row=Sor törlése? (Automatic Translation)
 dismiss-operation=Utasítsa el a művelet (Automatic Translation)
 do=Do (Automatic Translation)
 does-not-contain=Nem tartalmaz (Automatic Translation)
+drag-from-sidebar-and-drop-here=Az oldalsávról húzással itt (Automatic Translation)
 duplicate-field=Ismétlődő mező (Automatic Translation)
+element-sets=Elem beállítása (Automatic Translation)
+elements=Elemek (Automatic Translation)
 enable=Engedélyezi a (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=A mező név már használatban van.
@@ -53,7 +56,7 @@ remove-field=Mező eltávolítása (Automatic Translation)
 remove-success-page=Távolítsa el a siker oldal (Automatic Translation)
 require=Igényel (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Szükséges mező (Automatic Translation)
+required-field=Kötelező mező (Automatic Translation)
 reset-page=Oldal visszaállítása
 rule=Szabály (Automatic Translation)
 rule-builder=Szabály-szerkesztő (Automatic Translation)
