--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_in.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_in.properties
@@ -27,7 +27,10 @@ delete-row=Menghapus baris? (Automatic Translation)
 dismiss-operation=Mengabaikan operasi (Automatic Translation)
 do=Apakah (Automatic Translation)
 does-not-contain=Tidak mengandung (Automatic Translation)
+drag-from-sidebar-and-drop-here=Drag dari sidebar dan drop di sini (Automatic Translation)
 duplicate-field=Duplikat Field (Automatic Translation)
+element-sets=Elemen set (Automatic Translation)
+elements=Elemen (Automatic Translation)
 enable=Mengaktifkan (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Nama field yang sudah digunakan. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Menghapus bidang (Automatic Translation)
 remove-success-page=Menghapus halaman sukses (Automatic Translation)
 require=Memerlukan (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Memerlukan bidang (Automatic Translation)
+required-field=Harus diisi (Automatic Translation)
 reset-page=Mengatur ulang halaman (Automatic Translation)
 rule=Aturan (Automatic Translation)
 rule-builder=Aturan Builder (Automatic Translation)
