--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_it.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_it.properties
@@ -27,7 +27,10 @@ delete-row=Elimina riga? (Automatic Translation)
 dismiss-operation=Allontanare il funzionamento (Automatic Translation)
 do=Fare (Automatic Translation)
 does-not-contain=Non contiene (Automatic Translation)
+drag-from-sidebar-and-drop-here=Trascinare dalla barra laterale e qui (Automatic Translation)
 duplicate-field=Campo duplicati (Automatic Translation)
+element-sets=Insiemi di elementi (Automatic Translation)
+elements=Elementi (Automatic Translation)
 enable=Enable (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Il nome del campo è già stato utilizzato.
@@ -53,7 +56,7 @@ remove-field=Rimuovere il campo (Automatic Translation)
 remove-success-page=Rimuovere la pagina di successo (Automatic Translation)
 require=Richiedono (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Richiedono il campo (Automatic Translation)
+required-field=Campo obbligatorio (Automatic Translation)
 reset-page=Ripristina Pagina
 rule=Regola (Automatic Translation)
 rule-builder=Generatore di regole (Automatic Translation)
