--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_iw.properties
@@ -27,7 +27,10 @@ delete-row=האם למחוק את השורה? (Automatic Translation)
 dismiss-operation=פעולת הביטול (Automatic Translation)
 do=לעשות (Automatic Translation)
 does-not-contain=אינו מכיל (Automatic Translation)
+drag-from-sidebar-and-drop-here=לגרור מהסרגל הצידי ולשחרר כאן (Automatic Translation)
 duplicate-field=לשכפול שדה (Automatic Translation)
+element-sets=רכיב סטים (Automatic Translation)
+elements=אלמנטים (Automatic Translation)
 enable=לאפשר (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=שדה בשם זה כבר נמצא בשימוש.
@@ -53,7 +56,7 @@ remove-field=הסר שדה (Automatic Translation)
 remove-success-page=הסר דף הצלחה (Automatic Translation)
 require=דורשים (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=דורשים שדה (Automatic Translation)
+required-field=שדה חובה (Automatic Translation)
 reset-page=אפס דף
 rule=כלל (Automatic Translation)
 rule-builder=כלל בונה (Automatic Translation)
