--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_ko.properties
@@ -27,7 +27,10 @@ delete-row=행을 삭제? (Automatic Translation)
 dismiss-operation=작업을 기 각 (Automatic Translation)
 do=할 (Automatic Translation)
 does-not-contain=포함 되어 있지 않습니다. (Automatic Translation)
+drag-from-sidebar-and-drop-here=사이드바에서 드래그 앤 드롭 여기 (Automatic Translation)
 duplicate-field=중복 필드 (Automatic Translation)
+element-sets=요소 집합 (Automatic Translation)
+elements=요소 (Automatic Translation)
 enable=활성화 (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=필드 이름이 이미 사용 중에서입니다. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=필드 제거 (Automatic Translation)
 remove-success-page=성공 페이지 제거 (Automatic Translation)
 require=필요 (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=필드 필요 (Automatic Translation)
+required-field=필수 필드 (Automatic Translation)
 reset-page=페이지를 다시 설정 (Automatic Translation)
 rule=규칙 (Automatic Translation)
 rule-builder=규칙 작성기 (Automatic Translation)
