--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_lt.properties
@@ -27,7 +27,10 @@ delete-row=Naikinti eilutę? (Automatic Translation)
 dismiss-operation=Atsisakymo veiksmas (Automatic Translation)
 do=Ar (Automatic Translation)
 does-not-contain=Sudėtyje nėra (Automatic Translation)
+drag-from-sidebar-and-drop-here=Vilkti iš šoninės juostos ir čia (Automatic Translation)
 duplicate-field=Dubliuotas laukas (Automatic Translation)
+element-sets=Elementų rinkinius (Automatic Translation)
+elements=Elementai (Automatic Translation)
 enable=Įgalinti (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Lauko pavadinimas jau naudojamas. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Pašalinti lauką (Automatic Translation)
 remove-success-page=Pašalinti sėkmės puslapis (Automatic Translation)
 require=Reikalauti (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Reikalingas laukas (Automatic Translation)
+required-field=Privalomas laukelis (Automatic Translation)
 reset-page=Atitaisytas puslapis (Automatic Translation)
 rule=Taisyklė (Automatic Translation)
 rule-builder=Darbo statybininkas (Automatic Translation)
