--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_nb.properties
@@ -27,7 +27,10 @@ delete-row=Slett rad? (Automatic Translation)
 dismiss-operation=Ignoreringsoperasjonen (Automatic Translation)
 do=Gjøre (Automatic Translation)
 does-not-contain=Inneholder ikke (Automatic Translation)
+drag-from-sidebar-and-drop-here=Dra fra side og slipp her (Automatic Translation)
 duplicate-field=Duplisert felt (Automatic Translation)
+element-sets=Element sett (Automatic Translation)
+elements=Elementer (Automatic Translation)
 enable=Aktiverer (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Navnet er allerede i bruk. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Fjerne felt (Automatic Translation)
 remove-success-page=Fjerne suksess (Automatic Translation)
 require=Krever (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Kreve feltet (Automatic Translation)
+required-field=Obligatorisk felt (Automatic Translation)
 reset-page=Tilbakestilte siden (Automatic Translation)
 rule=Regelen (Automatic Translation)
 rule-builder=Regel Builder (Automatic Translation)
