--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_pl.properties
@@ -27,7 +27,10 @@ delete-row=Usuń wiersz? (Automatic Translation)
 dismiss-operation=Odrzucić operacji (Automatic Translation)
 do=Zrobić (Automatic Translation)
 does-not-contain=Nie zawiera (Automatic Translation)
+drag-from-sidebar-and-drop-here=Paska bocznego można przeciągać i upuszczać tutaj (Automatic Translation)
 duplicate-field=Zduplikowane pola (Automatic Translation)
+element-sets=Zestawy elementu (Automatic Translation)
+elements=Elementy (Automatic Translation)
 enable=Włącz (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Nazwa pola jest już w użyciu. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Usuń pole (Automatic Translation)
 remove-success-page=Usuń stronę sukcesu (Automatic Translation)
 require=Wymagają (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Wymagane pola (Automatic Translation)
+required-field=Pole wymagane (Automatic Translation)
 reset-page=Resetuj stronę (Automatic Translation)
 rule=Reguła (Automatic Translation)
 rule-builder=Reguła Builder (Automatic Translation)
