--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_pt_BR.properties
@@ -27,7 +27,10 @@ delete-row=Excluir a linha? (Automatic Translation)
 dismiss-operation=Descartar a operação (Automatic Translation)
 do=Fazer (Automatic Translation)
 does-not-contain=Não contém (Automatic Translation)
+drag-from-sidebar-and-drop-here=Arraste a partir da barra lateral e deixar aqui (Automatic Translation)
 duplicate-field=Duplicar o campo (Automatic Translation)
+element-sets=Elemento conjuntos (Automatic Translation)
+elements=Elementos (Automatic Translation)
 enable=Habilitar
 enable-x=Habilitar {0}
 field-name-is-already-in-use=O nome do campo já está em uso.
@@ -53,7 +56,7 @@ remove-field=Remover campo (Automatic Translation)
 remove-success-page=Remova a página de sucesso (Automatic Translation)
 require=Tornar obrigatório
 require-x=Tornar {0} obrigatório
-required-field=Campo obrigatório
+required-field=Campo obrigatório (Automatic Translation)
 reset-page=Restaurar página
 rule=Regra
 rule-builder=Construtor de regras
