--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_ru.properties
@@ -27,7 +27,10 @@ delete-row=Удалить строку? (Automatic Translation)
 dismiss-operation=Уволить операции (Automatic Translation)
 do=Делать (Automatic Translation)
 does-not-contain=Не содержит (Automatic Translation)
+drag-from-sidebar-and-drop-here=Перетащите из боковой панели и перетащите сюда (Automatic Translation)
 duplicate-field=Дублировать поле (Automatic Translation)
+element-sets=Наборы элементов (Automatic Translation)
+elements=Элементы (Automatic Translation)
 enable=Включить (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Поле имя уже используется. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Удалить поле (Automatic Translation)
 remove-success-page=Удалить страницу успеха (Automatic Translation)
 require=Требуется (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Требуется поле (Automatic Translation)
+required-field=Обязательное поле (Automatic Translation)
 reset-page=Сбросить страницы (Automatic Translation)
 rule=Правило (Automatic Translation)
 rule-builder=Правило построитель (Automatic Translation)
