--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_sk.properties
@@ -27,7 +27,10 @@ delete-row=Odstrániť riadok? (Automatic Translation)
 dismiss-operation=Operácia (Automatic Translation)
 do=Robiť (Automatic Translation)
 does-not-contain=Neobsahuje (Automatic Translation)
+drag-from-sidebar-and-drop-here=Presuňte z bočného panela a presuňte sem (Automatic Translation)
 duplicate-field=Duplicitné pole (Automatic Translation)
+element-sets=Prvok množiny (Automatic Translation)
+elements=Prvky (Automatic Translation)
 enable=Zapnúť (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Názov poľa sa už používa.
@@ -53,7 +56,7 @@ remove-field=Odstrániť pole (Automatic Translation)
 remove-success-page=Odstránenie stránky úspech (Automatic Translation)
 require=Vyžadujú (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Vyžadujú pole (Automatic Translation)
+required-field=Povinné pole (Automatic Translation)
 reset-page=Obnoviť stránku (Automatic Translation)
 rule=Pravidlo (Automatic Translation)
 rule-builder=Tvorbu pravidiel (Automatic Translation)
