--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_sl.properties
@@ -27,7 +27,10 @@ delete-row=Ali želite izbrisati vrstice? (Automatic Translation)
 dismiss-operation=Zavrne delovanje (Automatic Translation)
 do=Ali (Automatic Translation)
 does-not-contain=Ne vsebuje (Automatic Translation)
+drag-from-sidebar-and-drop-here=Povlecite iz stranske vrstice in spustite tukaj (Automatic Translation)
 duplicate-field=Podvajanje polja (Automatic Translation)
+element-sets=Element sklopov (Automatic Translation)
+elements=Elementi (Automatic Translation)
 enable=Omogoči (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Ime polja je že v uporabi. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Odstrani polje (Automatic Translation)
 remove-success-page=Premestitev stran uspeh (Automatic Translation)
 require=Zahtevajo (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Zahteva polje (Automatic Translation)
+required-field=Zahtevano polje (Automatic Translation)
 reset-page=Ponastavi stran (Automatic Translation)
 rule=Pravilo (Automatic Translation)
 rule-builder=Pravilo Builder (Automatic Translation)
