--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_th.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_th.properties
@@ -27,7 +27,10 @@ delete-row=ลบแถวหรือไม่ (Automatic Translation)
 dismiss-operation=ยกเลิกการดำเนินการ (Automatic Translation)
 do=ทำ (Automatic Translation)
 does-not-contain=ไม่ประกอบด้วย (Automatic Translation)
+drag-from-sidebar-and-drop-here=ลากจาก sidebar และวางที่นี่ (Automatic Translation)
 duplicate-field=เขตข้อมูลซ้ำกัน (Automatic Translation)
+element-sets=ชุดองค์ประกอบ (Automatic Translation)
+elements=องค์ประกอบ (Automatic Translation)
 enable=เปิดใช้งาน (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=ใช้ชื่อเขตข้อมูลอยู่แล้ว (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=เอาเขตข้อมูลออก (Automatic Translatio
 remove-success-page=เอาหน้า (Automatic Translation)
 require=จำเป็นต้อง (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=จำเป็นต้องใช้ฟิลด์ (Automatic Translation)
+required-field=ฟิลด์ที่จำเป็น (Automatic Translation)
 reset-page=ตั้งค่าหน้า (Automatic Translation)
 rule=กฎ (Automatic Translation)
 rule-builder=สร้างกฎ (Automatic Translation)
