--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_tr.properties
@@ -27,7 +27,10 @@ delete-row=Satır silinsin mi? (Automatic Translation)
 dismiss-operation=İşlemi kapatmak (Automatic Translation)
 do=Yapmak (Automatic Translation)
 does-not-contain=İçermez (Automatic Translation)
+drag-from-sidebar-and-drop-here=Kenar Çubuğu'ndan sürükleyip buraya bırakın (Automatic Translation)
 duplicate-field=Yinelenen alan (Automatic Translation)
+element-sets=Öğe setleri (Automatic Translation)
+elements=Öğeleri (Automatic Translation)
 enable=Etkinleştir (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Alan adı zaten kullanımda. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Alan kaldırma (Automatic Translation)
 remove-success-page=Başarı sayfasını Kaldır (Automatic Translation)
 require=Gerektirir (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Alan gerektirir (Automatic Translation)
+required-field=Gerekli alan (Automatic Translation)
 reset-page=Sayfayı Sıfırla (Automatic Translation)
 rule=Kural (Automatic Translation)
 rule-builder=Kural Oluşturucu (Automatic Translation)
