--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_uk.properties
@@ -27,7 +27,10 @@ delete-row=Видалити рядок? (Automatic Translation)
 dismiss-operation=Операцію видалення (Automatic Translation)
 do=Зробити (Automatic Translation)
 does-not-contain=Не містить (Automatic Translation)
+drag-from-sidebar-and-drop-here=З бічної панелі перетягнути тут (Automatic Translation)
 duplicate-field=Повторюване поле (Automatic Translation)
+element-sets=Елемент набори (Automatic Translation)
+elements=Елементи (Automatic Translation)
 enable=Увімкнути (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Ім'я поля вже існує. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Видалити поля (Automatic Translation)
 remove-success-page=Видалити сторінку успіху (Automatic Translation)
 require=Вимагають (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Вимагають поле (Automatic Translation)
+required-field=Обов'язкове поле (Automatic Translation)
 reset-page=Скинути сторінки (Automatic Translation)
 rule=Правило (Automatic Translation)
 rule-builder=Правило будівельника (Automatic Translation)
