--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_vi.properties
@@ -27,7 +27,10 @@ delete-row=Xoá hàng? (Automatic Translation)
 dismiss-operation=Bỏ qua những hoạt động (Automatic Translation)
 do=Làm (Automatic Translation)
 does-not-contain=Không chứa (Automatic Translation)
+drag-from-sidebar-and-drop-here=Kéo khỏi Dải tiện ích và thả ở đây (Automatic Translation)
 duplicate-field=Lặp lại các lĩnh vực (Automatic Translation)
+element-sets=Nguyên tố bộ (Automatic Translation)
+elements=Yếu tố (Automatic Translation)
 enable=Kích hoạt (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Tên trường hiện đang sử dụng. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Loại bỏ các lĩnh vực (Automatic Translation)
 remove-success-page=Loại bỏ thành công trang (Automatic Translation)
 require=Yêu cầu (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Yêu cầu trường (Automatic Translation)
+required-field=Trường bắt buộc (Automatic Translation)
 reset-page=Đặt lại trang (Automatic Translation)
 rule=Quy tắc (Automatic Translation)
 rule-builder=Nguyên tắc xây dựng (Automatic Translation)
