--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_zh_CN.properties
@@ -27,7 +27,10 @@ delete-row=删除行吗？ (Automatic Translation)
 dismiss-operation=消除操作 (Automatic Translation)
 do=做 (Automatic Translation)
 does-not-contain=不包含 (Automatic Translation)
+drag-from-sidebar-and-drop-here=从边栏拖放到此处 (Automatic Translation)
 duplicate-field=重复字段 (Automatic Translation)
+element-sets=元素集 (Automatic Translation)
+elements=元素 (Automatic Translation)
 enable=启用 (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=字段名已被使用
