--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_zh_TW.properties
@@ -27,7 +27,10 @@ delete-row=刪除行嗎？ (Automatic Translation)
 dismiss-operation=消除操作 (Automatic Translation)
 do=做 (Automatic Translation)
 does-not-contain=不包含 (Automatic Translation)
+drag-from-sidebar-and-drop-here=從邊欄拖放到此處 (Automatic Translation)
 duplicate-field=重複欄位 (Automatic Translation)
+element-sets=元素集 (Automatic Translation)
+elements=元素 (Automatic Translation)
 enable=啟用 (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=欄位名稱已經被使用。
@@ -53,7 +56,7 @@ remove-field=刪除欄位 (Automatic Translation)
 remove-success-page=刪除成功頁 (Automatic Translation)
 require=要求 (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=需要欄位 (Automatic Translation)
+required-field=必要欄位 (Automatic Translation)
 reset-page=重置頁 (Automatic Translation)
 rule=規則 (Automatic Translation)
 rule-builder=規則產生器 (Automatic Translation)
