--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_pt_PT.properties
@@ -27,7 +27,10 @@ delete-row=Excluir a linha? (Automatic Translation)
 dismiss-operation=Descartar operação
 do=Fazer (Automatic Translation)
 does-not-contain=Não contém (Automatic Translation)
+drag-from-sidebar-and-drop-here=Arraste a partir da barra lateral e deixar aqui (Automatic Translation)
 duplicate-field=Duplicar o campo (Automatic Translation)
+element-sets=Elemento conjuntos (Automatic Translation)
+elements=Elementos (Automatic Translation)
 enable=Enable (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=O nome do campo já está a ser utilizado.
@@ -53,7 +56,7 @@ remove-field=Remover campo (Automatic Translation)
 remove-success-page=Remova a página de sucesso (Automatic Translation)
 require=Exigir (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Necessitam de campo (Automatic Translation)
+required-field=Campo obrigatório (Automatic Translation)
 reset-page=Repôr Página
 rule=Regra de (Automatic Translation)
 rule-builder=Construtor de regra (Automatic Translation)
