--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language_ro.properties
@@ -27,7 +27,10 @@ delete-row=Ștergere rând? (Automatic Translation)
 dismiss-operation=Respingerea funcţionarea (Automatic Translation)
 do=Face (Automatic Translation)
 does-not-contain=Nu contine (Automatic Translation)
+drag-from-sidebar-and-drop-here=Trageţi de bara laterală şi plasaţi aici (Automatic Translation)
 duplicate-field=Domeniul duplicat (Automatic Translation)
+element-sets=Seturi de element (Automatic Translation)
+elements=Elemente (Automatic Translation)
 enable=Permite (Automatic Translation)
 enable-x=Enable {0} (Automatic Copy)
 field-name-is-already-in-use=Numele de câmp este deja în uz. (Automatic Translation)
@@ -53,7 +56,7 @@ remove-field=Eliminaţi câmpul (Automatic Translation)
 remove-success-page=Elimina pagina de succes (Automatic Translation)
 require=Necesită (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
-required-field=Nevoie de câmp (Automatic Translation)
+required-field=Câmp obligatoriu (Automatic Translation)
 reset-page=Resetaţi pagina (Automatic Translation)
 rule=Regula (Automatic Translation)
 rule-builder=Constructor de regulă (Automatic Translation)
